Vendor jekyll search JS
**Why**: Including simple-jekyll-search as an npm dependency
brings along cypress, which depends on a version of jQuery that
has a vulnerability, so this removes that vulnerability for us

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
     <script type="text/javascript">
       anchors.add('#main-content h2, #main-content h3, #main-content [data-anchor]');
     </script>
-    <script type="text/javascript" src="{{ site.baseurl }}/simple-jekyll-search.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
     <script type="text/javascript">
       var sjs = SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
